--- a/docs-viewer/src/style.css
+++ b/docs-viewer/src/style.css
@@ -59,7 +59,7 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1800px;
+  width: 65vw;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
